issue with viewport height on mobile 90%completed

--- a/src/pages/completed_projects/CompletedProjects.css
+++ b/src/pages/completed_projects/CompletedProjects.css
@@ -17,7 +17,8 @@
 
   }
   .completed-projects-list {
-    height:calc(100vh - 340px)
+    height:calc(100svh - 294px);
+
   }
 
 
